--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,12 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "jwt-simple": "^0.5.1",
-    "mongoose": "^5.0.14",
     "multer": "^1.3.0",
+    "mysql2": "^1.5.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sequelize": "^4.37.6"
   },
   "devDependencies": {},
   "scripts": {
