--- a/server/package.json
+++ b/server/package.json
@@ -11,15 +11,16 @@
     "express": "^4.16.3",
     "jwt-simple": "^0.5.1",
     "multer": "^1.3.0",
-    "mysql2": "^1.5.3",
+    "mysql": "^2.15.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "sequelize": "^4.37.6"
+    "passport-local": "^1.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "^5.1.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node index.js"
   },
   "author": "",
